@startuml MLD_Tortiki
'== A4 portrait ==
skinparam pageWidth 210mm
skinparam pageMargin 10
skinparam dpi 150
scale max 800 width
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 10
skinparam shadowing false

skinparam class {
  BackgroundColor #EEF6FB
  BorderColor #1B6FA8
  FontColor #1B3A4B
  ArrowColor #1B6FA8
  FontSize 10
}

title Modèle Logique de Données (MLD) — Tortiki

entity "USER" as User {
  * id : BIGINT <<PK>>
  --
  email : VARCHAR
  password_hash : VARCHAR
  phone : VARCHAR
  city : VARCHAR
  latitude : NUMERIC
  longitude : NUMERIC
  enabled : BOOLEAN
}

entity "ROLE" as Role {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR
}

entity "USER_ROLES" as UserRoles {
  * user_id : BIGINT <<FK>>
  * role_id : BIGINT <<FK>>
}

entity "LISTING" as Listing {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR
  price : NUMERIC
  portions : INTEGER
  city : VARCHAR
  pickup_lat : NUMERIC
  pickup_lng : NUMERIC
  pickup_datetime : TIMESTAMP
  status : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  # seller_id : BIGINT <<FK>>
  # cuisine_type_id : BIGINT <<FK>>
}

entity "CUISINE_TYPE" as Cuisine {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR
}

entity "ALLERGEN" as Allergen {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR
  enabled : BOOLEAN
}

entity "LISTING_ALLERGENS" as ListAllerg {
  * listing_id : BIGINT <<FK>>
  * allergen_id : BIGINT <<FK>>
}

entity "CONTACT_REQUEST" as CReq {
  * id : BIGINT <<PK>>
  --
  # listing_id : BIGINT <<FK>>
  # buyer_id : BIGINT <<FK>>
  status : VARCHAR
  message : VARCHAR
  portions : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  <<UNIQUE(listing_id,buyer_id)>>
}

entity "REVIEW" as Review {
  * id : BIGINT <<PK>>
  --
  # contact_request_id : BIGINT <<FK>>
  # reviewer_id : BIGINT <<FK>>
  # seller_id : BIGINT <<FK>>
  # listing_id : BIGINT <<FK>>
  rating : INTEGER
  comment : VARCHAR
  created_at : TIMESTAMP
}

User "1,1" -- "0,n" Listing : PUBLIER
User "1,1" -- "0,n" UserRoles
Role "1,1" -- "0,n" UserRoles
Cuisine "1,1" -- "0,n" Listing : CATEGORISER
Listing "1,1" -- "0,n" ListAllerg
Allergen "1,1" -- "0,n" ListAllerg
Listing "1,1" -- "0,n" CReq : CONCERNER
User "1,1" -- "0,n" CReq : SOUMETTRE
CReq "1,1" -- "0,1" Review : GENERER
User "1,1" -- "0,n" Review : REDIGER
Listing "1,1" -- "0,n" Review : EVALUER

note bottom of CReq
  status logique porté en base par le type
  ENUM natif contact_request_status
end note

note right of Listing
  status logique porté en base par le type
  ENUM natif listing_status (valeur MODERATED
  ajoutée par la migration V2). pickup_lat/pickup_lng
  ajoutés pour la recherche géolocalisée (US-06)
end note

note left of Review
  seller_id est une dénormalisation volontaire :
  redondant avec listing_id.seller_id, il évite
  une jointure supplémentaire sur le tableau de
  bord vendeur (accès direct aux avis reçus)
end note

@enduml